; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/extr_drm_context.c_drm_newctx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/extr_drm_context.c_drm_newctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.drm_file = type { i32 }
%struct.drm_ctx = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @drm_newctx(%struct.drm_device* %0, i8* %1, %struct.drm_file* %2) #0 {
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.drm_file*, align 8
  %7 = alloca %struct.drm_ctx*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.drm_file* %2, %struct.drm_file** %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.drm_ctx*
  store %struct.drm_ctx* %9, %struct.drm_ctx** %7, align 8
  %10 = load %struct.drm_ctx*, %struct.drm_ctx** %7, align 8
  %11 = getelementptr inbounds %struct.drm_ctx, %struct.drm_ctx* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @DRM_DEBUG(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %15 = load %struct.drm_file*, %struct.drm_file** %6, align 8
  %16 = load %struct.drm_ctx*, %struct.drm_ctx** %7, align 8
  %17 = getelementptr inbounds %struct.drm_ctx, %struct.drm_ctx* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @drm_context_switch_complete(%struct.drm_device* %14, %struct.drm_file* %15, i32 %18)
  ret i32 0
}

declare dso_local i32 @DRM_DEBUG(i8*, i32) #1

declare dso_local i32 @drm_context_switch_complete(%struct.drm_device*, %struct.drm_file*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
